# dotfiles

./: .gitignore  .luarc.json  README.md  dump.rdb
.zed/: settings.json
aerospace/: aerospace.toml
alacritty/: alacritty.toml  alacritty.yml
astrovim_custom/: init.lua
claude/: settings.json
fvim/: init.lua
ghostty/: config  keybind.ghostty  nord.icns  vim.ghostty
hammerspoon/: init.lua
helix/: config.toml  languages.toml
kitty/: current-theme.conf  kitty.conf  kitty.conf.bak
lazygit/: state.yml
lazyvim/: .nvimrc  README.md  lazy-lock.json  lazyvim.json  nvchad  playground.lua
lvim/: config.lua  lazy-lock.json
neovim-vscode/: init.lua
nvchad/: init.lua  lazy-lock.json  todo.md
nvchad_custom/: chadrc.lua  colors.lua  highlights.lua  init.lua  mappings.lua  plugins.lua  utils.lua
nvchad_port/: .gitignore  init.lua
nvim/: init.lua  lazy-lock.json  lazyvim.json
nvim.lazyvim/: lazy-lock.json  lazyvim.json
nvim.old/: lazy-lock.json
opencode/: oh-my-opencode.json  opencode.json
scripts/: notify  notify_install.sh
sketchybar/: bar.lua  colors.lua  colors.sh  default.lua  icons.lua  init.lua  sketchybarrc  vars.sh
skhd/: skhdrc
tmux/: .tmux.conf  .tmux.conf.bak  light.conf
vim/: coc-settings.json  init.vim  mappings.vim  settings.vim
vimchik/: init.lua  lazy-lock.json
wezterm/: mapping.lua  wezterm.lua
yabai/: yabairc
zed/: keymap.json  settings.json  tasks.json
zellij/: config.kdl  config.kdl.bak
zellij/plugins/statusbar/: Cargo.toml
zellij/plugins/statusbar/src/: datetime.rs
zen/: user.js
zsh/: .zshrc  (+1 more)
(+414 files in other folders)
