[package]
name = "zellij-statusbar"
version = "0.1.0"
authors = ["Alex Fedoseev <alex@fedoseev.mx>"]
edition = "2021"

[[bin]]
name = "statusbar"
path = "src/main.rs"

[dependencies]
zellij-tile = "0.36.0"
zellij-tile-utils = "0.36.0"
chrono = "0.4.23"
colored = "2"
ansi_term = "0.12"
unicode-width = "0.1.8"
